# brave-core

./: brave_paks.gni  jest.config.js  package-lock.json  package.json  tsconfig-jest.json
.github/: CODEOWNERS
android/: brave_java_resources.gni  brave_java_sources.gni
android/java/: apk_for_test.flags
android/java/org/chromium/chrome/browser/fullscreen/: BUILD.gn
app/: app_management_strings_override.grdp  bookmarks_strings_override.grdp  brave_generated_resources.grd  brave_settings_strings.grdp  brave_strings.grd  brave_strings_override.grd  certificate_manager.grdp  extensions_strings_override.grdp  feature_defaults_unittest.cc  generated_resources.grd  generated_resources_override.grd  nearby_share_strings_override.grdp  os_settings_search_tag_strings_override.grdp  os_settings_strings.grdp  os_settings_strings_override.grdp  password_manager_ui_strings.grdp  profiles_strings.grdp  profiles_strings_override.grdp  settings_brave_strings.grdp  settings_brave_strings_override.grdp  settings_strings.grdp  settings_strings_override.grdp  shared_settings_strings.grdp
app/resources/: brave_generated_resources_am.xtb  brave_generated_resources_ar.xtb  brave_generated_resources_bg.xtb  brave_generated_resources_bn.xtb  brave_generated_resources_ca.xtb  brave_generated_resources_cs.xtb  brave_generated_resources_da.xtb  brave_generated_resources_de.xtb  brave_generated_resources_el.xtb  brave_generated_resources_en-GB.xtb  brave_generated_resources_es-419.xtb  brave_generated_resources_es.xtb  brave_generated_resources_et.xtb  brave_generated_resources_fa.xtb  brave_generated_resources_fi.xtb  brave_generated_resources_fil.xtb  brave_generated_resources_fr-CA.xtb  brave_generated_resources_fr.xtb  brave_generated_resources_gl.xtb  brave_generated_resources_gu.xtb  brave_generated_resources_hi.xtb  brave_generated_resources_hr.xtb  brave_generated_resources_hu.xtb  brave_generated_resources_id.xtb  brave_generated_resources_it.xtb  brave_generated_resources_iw.xtb  (+149 more)
browser/: about_flags.cc  brave_browser_features.cc  brave_content_browser_client.cc  sources.gni
browser/customize_menu/android/: BUILD.gn
browser/customize_menu/android/java/res/layout/: custom_menu_item_layout.xml  customize_menu_preference_layout.xml
browser/customize_menu/android/java/src/org/chromium/brave/browser/customize_menu/: CustomMenuItem.java  CustomizeMenuUtils.java
browser/customize_menu/android/java/src/org/chromium/brave/browser/customize_menu/settings/: CustomizeMenuAdapter.java  CustomizeMenuListener.java  CustomizeMenuPreferenceFragment.java
browser/ntp_background/infobar/: BUILD.gn  new_tab_page_ad_viewed_infobar_delegate.cc  new_tab_page_ad_viewed_infobar_delegate.h
browser/safe_browsing/: sources.gni
components/: autofill_payments_strings.grdp  autofill_prediction_improvements_strings.grdp  autofill_strings.grdp  bookmark_bar_strings_override.grdp  collaboration_strings.grdp  commerce_strings.grdp  commerce_strings_override.grdp  components_strings.grd  components_strings_override.grd  facilitated_payments_strings.grdp  history_clusters_strings_override.grdp  history_strings.grdp  management_strings.grdp  management_strings_override.grdp  new_or_sad_tab_strings_override.grdp  omnibox_pedal_ui_strings_override.grdp  omnibox_strings.grdp  omnibox_strings_override.grdp  page_info_strings.grdp  page_info_strings_override.grdp  password_manager_strings.grdp  payments_strings_override.grdp  permissions_strings.grdp  plus_addresses_strings.grdp  policy_strings.grdp  privacy_sandbox_chrome_strings.grdp  privacy_sandbox_chrome_strings_override.grdp  security_interstitials_strings_override.grdp  site_settings_strings.grdp  supervised_user_strings.grdp  supervised_user_strings_override.grdp
components/safe_browsing/android/: BUILD.gn
components/safe_browsing/android/java/src/org/chromium/components/safe_browsing/: BraveSafeBrowsingApiHandler.java
patches/: android_webview-browser-permission-media_access_permission_request.cc.patch  base-BUILD.gn.patch  base-logging.cc.patch  base-metrics-histogram_functions.h.patch  base-test-BUILD.gn.patch  base-test-launcher-test_results_tracker.cc.patch  base-threading-thread_restrictions.h.patch  base-trace_event-builtin_categories.h.patch  build-android-gyp-create_app_bundle.py.patch  build-android-gyp-lint.py.patch  build-android-gyp-proguard.py.patch  build-config-BUILDCONFIG.gn.patch  build-config-android-config.gni.patch  build-config-android-internal_rules.gni.patch  build-config-android-rules.gni.patch  chrome-BUILD.gn.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-chrome_public_apk_tmpl.gni.patch  chrome-android-expectations-lint-suppressions.xml.patch  chrome-android-features-tab_ui-BUILD.gn.patch  chrome-android-feed-core-java-src-org-chromium-chrome-browser-feed-FeedSurfaceMediator.java.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-contextmenu-ChromeContextMenuPopulator.java.patch  chrome-android-java-src-org-chromium-chrome-browser-notifications-NotificationPlatformBridge.java.patch  chrome-android-java-src-org-chromium-chrome-browser-privacy-settings-PrivacySettings.java.patch  chrome-android-java-src-org-chromium-chrome-browser-sync-settings-ManageSyncSettings.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-android-browsing_data-browsing_data_bridge.cc.patch  chrome-browser-bookmarks-android-BUILD.gn.patch  chrome-browser-extensions-BUILD.gn.patch  chrome-browser-extensions-api-developer_private-extension_info_generator.cc.patch  chrome-browser-extensions-extension_management.cc.patch  chrome-browser-extensions-extension_tab_util.cc.patch  chrome-browser-global_keyboard_shortcuts_mac.mm.patch  chrome-browser-hub-internal-BUILD.gn.patch  chrome-browser-net-profile_network_context_service.cc.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-profiles-profile.cc.patch  (+157 more)
resources/: resource_ids.spec
script/: chromium-rebase-l10n.py  push-l10n.py
test/: BUILD.gn
(+839 files in other folders)
