# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/components/ai_chat/core/common/buildflags/buildflags.gni")
import("//brave/components/brave_wayback_machine/buildflags/buildflags.gni")
import("//brave/components/playlist/common/buildflags/buildflags.gni")
import("//brave/components/speedreader/common/buildflags/buildflags.gni")

brave_browser_safe_browsing_sources = []

brave_browser_safe_browsing_deps = [
  "//brave/components/ai_chat/core/common/buildflags",
  "//brave/components/brave_wayback_machine/buildflags",
  "//brave/components/playlist/common/buildflags",
  "//brave/components/speedreader/common/buildflags",
]
