# Copyright (c) 2025 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/config/android/rules.gni")  # Android build rules

android_library("java") {
  sources = [
    "java/src/org/chromium/brave/browser/customize_menu/CustomizeMenuUtils.java",
    "java/src/org/chromium/brave/browser/customize_menu/settings/CustomizeMenuAdapter.java",
    "java/src/org/chromium/brave/browser/customize_menu/settings/CustomizeMenuListener.java",
    "java/src/org/chromium/brave/browser/customize_menu/settings/CustomizeMenuPreferenceFragment.java",
  ]

  deps = [
    ":java_resources",
    "//base:base_java",  # Core Java utilities
    "//brave/third_party/android_deps:com_brave_playlist_java",
    "//chrome/android:chrome_app_java_resources",
    "//chrome/browser/preferences:java",
    "//chrome/browser/settings:java",
    "//third_party/android_deps:material_design_java",
    "//third_party/androidx:androidx_annotation_annotation_java",
    "//third_party/androidx:androidx_recyclerview_recyclerview_java",
  ]

  resources_package = "org.chromium.brave.browser.customize_menu"
}

android_resources("java_resources") {
  sources = [
    "java/res/layout/custom_menu_item_layout.xml",
    "java/res/layout/customize_menu_preference_layout.xml",
  ]
}
