# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")

android_library("brave_safe_browsing_java") {
  deps = [
    "//base:base_java",
    "//brave/third_party/android_deps:com_google_api_client_java",
    "//brave/third_party/android_deps:com_google_apis_google_api_services_safebrowsing_java",
    "//brave/third_party/android_deps:com_google_http_client_android_java",    
    "//brave/third_party/android_deps:com_google_http_client_jackson2_java",
    "//brave/third_party/android_deps:com_google_http_client_java",
    "//brave/third_party/android_deps:google_play_services_safetynet_java",     #? AB: is google_play_services_safetynet_java a subject to remove?
    "//build/android:build_java",
    "//components/safe_browsing/android:safe_browsing_java",
    "//third_party/android_deps:google_play_services_basement_java",
    "//third_party/android_deps:google_play_services_tasks_java",
  ]

  # TODO(alexeybarabash): needs to be redone for cr130
  # https://github.com/brave/brave-browser/issues/41165
  sources = [ "java/src/org/chromium/components/safe_browsing/BraveSafeBrowsingApiHandler.java" ]
}

