# Copyright (c) 2025 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/config/android/rules.gni")

android_library("java") {
  sources = [
  "BraveFullscreenHtmlApiHandlerBase.java",
  "BraveFullscreenHtmlApiHandlerCompat.java",
  "BraveFullscreenHtmlApiHandlerLegacy.java",
  ]

  deps = [
    "//base:base_java",
    "//chrome/android:chrome_java",
  ]
  resources_package = "org.chromium.chrome.browser.fullscreen"
}